kubernetes/k3s-01/workloads/gotify/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: docker.io/gotify/server:3.1.1@sha256:44fc5bbd1c0618878e33073d38c2c13126b48f245c3fe12236b1da48eb203b86
          startupProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 1m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gotify-data
              mountPath: /app/data
      volumes:
        - name: gotify-data
          persistentVolumeClaim:
            claimName: gotify-data
