kubernetes/k3s-01/workloads/gotify/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.47fc5c.com`)
      kind: Rule
      services:
        - name: gotify
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: gotify-certificate
